# kedro-aim

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/scripts/: label_title_regex.py
.github/workflows/: check_pr_title.yml  code_quality.yml  labeler-title-regex.yml  pages.yml  publish.yml  release.yml  test.yml  testing.yml
docs/: index.md  requirements.txt
docs/code/: aim.md  cli.md  config.md  hooks.md  io.md
docs/logic/: changelog.md  configuration.md  developement.md  usage.md
scripts/: generate_json_schema.py
src/kedro_aim/: __init__.py
src/kedro_aim/aim/: utils.py
src/kedro_aim/config/: __init__.py  model.py  utils.py
src/kedro_aim/framework/cli/: cli.py  cli_utils.py
src/kedro_aim/framework/config/: __init__.py
src/kedro_aim/framework/hooks/: __init__.py  aim_hook.py  utils.py
src/kedro_aim/io/artifacts/: __init__.py  aim_artifact_dataset.py
src/kedro_aim/template/config/: aim.yml
src/tests/: conftest.py
src/tests/config/: test_utils.py
src/tests/framework/cli/: test_cli.py
src/tests/framework/hooks/: test_hook_deactivate_tracking.py  test_hook_initlization.py  test_hook_log_artifacts.py  test_hook_log_metrics.py  test_hook_log_parameters.py  test_hook_log_tags.py  test_hook_on_pipeline_error.py
src/tests/framework/hooks/test_hook_log_artifacts/: catalog.yml
src/tests/framework/hooks/test_hook_log_tags/: aim.yml
src/tests/io/: test_artifacts.py
src/tests/template/: test_aim_yml.py
static/jsonschema/: kedro_aim_schema.json
