# [BUILD] ==============================================================================
[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# [POETRY] =============================================================================
[tool.poetry]
name = "kedro_aim"
version = "0.1.2"
description = "A plugin to integrate the mlops plattform aim into your kedro project"
authors = ["An Hoang <anhoang31415@gmail.com>"]
readme = "README.md"
license = "MIT"
keywords = ["kedro", "aim", "kedro-plugin"]
homepage = "https://kedro-aim.readthedocs.io"
documentation = "https://kedro-aim.readthedocs.io"
repository = "https://github.com/AnH0ang/kedro-aim"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Framework :: Kedro",
    "Environment :: Plugins",
    "Framework :: Kedro",
    "Intended Audience :: Developers",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
kedro = ">=0.18.0"
aim = "^3.14.1"
pydantic = "^1.10.2"

[tool.poetry.dev-dependencies]
# Runnings notebook in vscode
ipykernel = ">=6.9.2"

# Documentation
mkdocs = ">=1.3.0"
mkdocs-material = ">=8.2.8"
mkdocstrings = ">=0.18.1"
mkdocstrings-python = ">=0.7.1"

# Testing
pytest = ">=7.1.0"
pytest-mock = "^3.10.0"
pytest-cov = "^4.0.0"
pytest-datadir = "^1.3.1"
pytest-lazy-fixture = "^0.6.3"

# Linting (Fix the version of linters to stay consitent with pre-commit)
pre-commit = ">=2.18.0"
commitizen = "2.23.0"
black = "22.3.0"
flake8 = "4.0.1"
flake8-docstrings = "1.6.0"
darglint = "1.8.1"
isort = "5.10.1"
pep8-naming = "0.13.0"
pydocstyle = "6.1.1"
mypy = "0.942"
unimport = "0.9.5"

# testing integration with other aim plugins
matplotlib = "^3.6.1"
plotly = "^5.10.0"
pandas = ">=1.0.0"

[tool.poetry.plugins]

[tool.poetry.plugins."kedro.hooks"]
aim_hook = "kedro_aim.framework.hooks.aim_hook:aim_hook"

[tool.poetry.plugins."kedro.project_commands"]
kedro_aim = "kedro_aim.framework.cli.cli:commands"

# [TOOLS CONFIG] =======================================================================
[tool.black]
line_length = 88
atomic = true

[tool.unimport]
gitignore = true
remove = true
include_star_import = true
ignore_init = true

[tool.isort]
profile = "black"
line_length = 88
atomic = true

[tool.pytest.ini_options]
addopts = "--cov=kedro_aim --cov-report=html"

[tool.mypy]
follow_imports = "silent"
strict_optional = true
warn_redundant_casts = true
disallow_any_generics = false
check_untyped_defs = true
warn_unused_ignores = false
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = false
show_column_numbers = true
show_error_codes = true

[tool.coverage.report]
fail_under = 100
show_missing = true
exclude_lines = [
    # Have to re-enable the standard pragma
    "pragma: no cover",
    # Don't complain if tests don't hit defensive assertion code:
    "raise NotImplementedError",
    "raise AssertionError",
    # Don't complain about abstract methods, they aren't run:
    "@(abc\\.)?abstractmethod",
]

[[tool.mypy.overrides]]
module = "pandas"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "yaml"
ignore_missing_imports = true

[tool.commitizen]
version = "0.1.2"
version_files = ["src/kedro_aim/__init__.py", "pyproject.toml:version"]
update_changelog_on_bump = true
